[package]
name = "no-gray"
version = "0.1.0"
authors = ["David Creswick <dcrewi@gyrae.net>", "David Golembiowski <david@dgolembiowski.com>"]
description = "No-std iterators over binary Gray codes; utilities for efficiently visiting all subsets of a collection. Fork of gray-codes-rs."
license = "MIT/Apache-2.0"
repository = "https://github.com/dmgolembiowski/no-gray-codes-rs"
documentation = "https://docs.rs/no-gray/"
readme = "README.md"
keywords = ["no-std", "embedded", "transmission"]
categories = ["algorithms", "graphics"]


[badges]
travis-ci = { repository = "dmgolembiowski/no-gray-codes-rs" }


[dependencies]
hashbrown = { version = "0.11.2" }
